<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalMidStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalMidEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/uma_bomba_de_gasolina_ilustrando_o_app"
            android:paddingVertical="10dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalStart"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:layout_editor_absoluteX="226dp" />

    <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/gasolina_ou_lcool"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalStart"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            tools:layout_editor_absoluteY="69dp"
            tools:layout_editor_absoluteX="255dp" />

    <TextView
            android:id="@+id/labelGasolina"
            android:layout_below="@id/edGasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_o_da_gasolina"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalMidStart"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            tools:layout_editor_absoluteY="128dp"
            tools:layout_editor_absoluteX="232dp" />

    <EditText
            android:id="@+id/edGasolina"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:contentDescription="@string/valor_em_reais_do_lcool"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/material_on_surface_stroke"
            app:layout_constraintTop_toBottomOf="@+id/labelGasolina"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart" />

    <EditText
            android:id="@+id/edAlcool"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:contentDescription="@string/valor_em_real_da_gasolina"
            android:paddingLeft="10dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/material_on_surface_stroke"
            app:layout_constraintTop_toBottomOf="@+id/labelAlcool"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            tools:layout_editor_absoluteY="239dp"
            tools:layout_editor_absoluteX="246dp" />
    <TextView
            android:id="@+id/labelAlcool"
            android:layout_below="@id/edAlcool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_o_do_lcool"
            app:layout_constraintTop_toBottomOf="@+id/edGasolina"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            app:layout_constraintStart_toStartOf="@+id/edGasolina"
            tools:layout_editor_absoluteY="204dp"
            tools:layout_editor_absoluteX="232dp" />


    <Switch
            android:id="@+id/swPercentual"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/_75"
            app:layout_constraintTop_toBottomOf="@+id/edAlcool"
            app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            tools:layout_editor_absoluteY="263dp"
            tools:layout_editor_absoluteX="403dp" />

    <Button
            android:id="@+id/btCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/calcular"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/swPercentual"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEnd" />

    <TextView
            android:id="@+id/textMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ainda_n_o_sei_qual_a_melhor"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalEnd"
            app:layout_constraintTop_toBottomOf="@+id/btCalcular" />

</androidx.constraintlayout.widget.ConstraintLayout>